[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-json-converter"
version = "1.0.0"
description = "A secure tool to convert between .env and JSON file formats locally."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["env", "json", "converter", "environment", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/PavlosIsaris/env-json-converter"
Repository = "https://github.com/PavlosIsaris/env-json-converter"
Documentation = "https://github.com/PavlosIsaris/env-json-converter#readme"

[tool.setuptools.packages.find]
where = ["converter"]

[tool.setuptools.package-data]
converter = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["converter"]
